# umami-alerts

./: .gitignore  Cargo.toml  LICENSE  README.md  config.sample.toml  deny.toml  flake.nix
.github/workflows/: build-release.yml  run-tests.yml
src/: main.rs
src/api/: client.rs  mod.rs  models.rs
src/config/: mod.rs  models.rs  validation.rs
src/error/: mod.rs
src/report/: generator.rs  helpers.rs  mod.rs  models.rs
templates/: email.html
