[package]
name = "umami-alerts"
version = "0.1.1"
authors = ["Chinmay D. Pai <chinmaydpai@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Automated analytics reports generator for Umami Analytics"
keywords = ["reports", "analytics", "email"]
repository = "https://github.com/Thunderbottom/umami-alerts"
homepage = "https://github.com/Thunderbottom/umami-alerts"
readme = "README.md"
include = ["src/**/*", "LICENSE*", "README.md"]
rust-version = "1.85"
publish = false

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
handlebars = { version = "6.3", features = ["dir_source"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-rustls-tls", "builder"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
mockito = "1.6"
